testdata/baselines/reference/submodule/conformance/callbackTagNestedParameter.errors.txt
cb_nested.js(4,4): error TS8010: Type annotations can only be used in TypeScript files.
cb_nested.js(11,12): error TS8010: Type annotations can only be used in TypeScript files.
cb_nested.js(12,14): error TS8010: Type annotations can only be used in TypeScript files.


==== cb_nested.js (3 errors) ====
    /**
     * @callback WorksWithPeopleCallback
     * @param {Object} person
     * @param {string} person.name
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @param {number} [person.age]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @returns {void}
    ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    
    /**
     * For each person, calls your callback.
     * @param {WorksWithPeopleCallback} callback
               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @returns {void}
                 ~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function eachPerson(callback) {
        callback({ name: "Empty" });
    }
    